# SkylightAPI

./: .gitignore  README.md
.github/workflows/: cli.yml  publish.yml
cli/: LICENSE  README.md  pyproject.toml
cli/src/skylight_cli/: __init__.py  client.py  config.py  errors.py  main.py  oauth.py  output.py
cli/tests/: test_cli.py  test_client.py  test_config.py  test_oauth.py
docs/: auth.md  release.md
docs/openapi/: openapi.yaml
examples/: post-chores.json
scripts/: validate_skills.py
skills/skylight/: SKILL.md
skills/skylight/agents/: openai.yaml
skills/skylight/references/: commands.md
