[project]
name = "unofficial-skylight-cli"
version = "0.1.0"
description = "Agent-friendly CLI for the unofficial Skylight API reference."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Skylight API Community" }
]
dependencies = [
  "httpx>=0.28.0",
  "typer>=0.22.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.14.0",
  "ty>=0.0.34",
]

[project.scripts]
skylightctl = "skylight_cli.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skylight_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
